# DMFT

./: .gitignore  CMakeLists.txt  Makefile  README.md  a  build.sh  dmft.cpp  dmft.h  input_file  interacting_gf.cpp  interacting_gf.h  leads_self_energy.cpp  leads_self_energy.h  main.cpp  parameters.cpp  parameters.h  transport.cpp  transport.h
src/: AIM.cpp  AIM.h  aim.cpp  aim.h  analytic_gf.cpp  analytic_gf.h  average_self_energy.cpp  calculate_current.cpp  dmft.cpp  dmft.h  get_self_energy_from_file.cpp  interacting_gf.cpp  interacting_gf.h  leads_self_energy.cpp  leads_self_energy.h  main.cpp  nca.cpp  nca.h  parameters.cpp  parameters.h  pseudo_gf.cpp  pseudo_gf.h  sigma_2.cpp  sigma_2.h  transport.cpp  transport.h  utilis.cpp  utilis.h
